--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+#Puerto principal
+server.port=8091
 
+#Pagina de error predeterminada
+server.error.whitelabel.enabled=false
+
+#Paginacion
+jwt.key=claveDeSeguridadDeJavaWebToken
+jwt.expiration=5000000
+
+spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+
+#Configuracion de la base de datos Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/vendido
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=17072021
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Configuracion de hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
+
+#Configuracion de linquibase
+spring.liquibase.change-log=classpath:/database/changelog/changelog-master.xml
+
+#Configuracion de paginacion
+spring.data.web.pageable.size-parameter=size
+spring.data.web.pageable.page-parameter=page
+spring.data.web.sort.sort-parameter=sort
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.max-page-size=100
+spring.data.web.pageable.one-indexed-parameters=false
+spring.data.web.pageable.prefix=
+spring.data.web.pageable.qualifier-delimiter=_
