Implementacion de cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #Configuracion de hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #Configuracion de linquibase
 spring.liquibase.change-log=classpath:/database/changelog/changelog-master.xml
@@ -31,3 +33,8 @@ spring.data.web.pageable.max-page-size=100
 spring.data.web.pageable.one-indexed-parameters=false
 spring.data.web.pageable.prefix=
 spring.data.web.pageable.qualifier-delimiter=_
+
+#Cache
+spring.cache.address=127.0.0.1:11211
+spring.cache.timer=1000
+logging.level.org.springframework.cache=TRACE
