--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,25 @@
     "name": "jwt.expiration",
     "type": "java.lang.String",
     "description": "A description for 'jwt.expiration'"
+  },
+  {
+    "name": "cache.address",
+    "type": "java.lang.String",
+    "description": "A description for 'cache.address'"
+  },
+  {
+    "name": "cache.timer",
+    "type": "java.lang.String",
+    "description": "A description for 'cache.timer'"
+  },
+  {
+    "name": "spring.cache.timer",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cache.timer'"
+  },
+  {
+    "name": "spring.cache.address",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cache.address'"
   }
 ]}
