--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.vendido</groupId>
 	<artifactId>vendido</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>vendido</name>
 	<description>Proyecto de Sistema Distribuidos </description>
 	<properties>
@@ -169,6 +170,7 @@
 
 
 	<build>
+		<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
